# LoRa_project_2024-2

./: .gitignore  README.md
Data_text/: 20.txt  25.txt
Data_text/Bridge/: DenCuaSong.csv  test1.csv  test1_4km.csv  test2.csv  test2_4km.csv
Data_text/DipInWater/: 100m.csv  200m.csv  25m.csv  50m.csv
Data_text/HoTay/: 12-12dbi_1st.csv  12-12dbi_2nd.csv  12-35dbi.csv  35-12dbi.csv  35-35dbi.csv
Data_text/KichBan_4/: Luc_di.csv  Luc_ve.csv
Lora_bitmap/: CMakeLists.txt  lora_logo.c  lora_logo.h
Lora_rx/: CMakeLists.txt  sdkconfig  sdkconfig.old
Lora_rx/main/: CMakeLists.txt  lora_rx.c
Lora_tx/: CMakeLists.txt  sdkconfig
Lora_tx/main/: CMakeLists.txt  lora_tx.c
Python_process/: Graph_data.py
component/: CMakeLists.txt  Kconfig.projbuild  README.md  lora.c  lora.h
